Made changes to blog and added templates.

--- a/templates/post.html
+++ b/templates/post.html
@@ -3,6 +3,9 @@
     <div class="post-title">
       {{p.subject}}
     </div>
+    <div class= "username">
+      {{p.username}}
+    </div>      
 
     <div class="post-date">
       {{p.created.strftime("%b %d, %Y")}}
